problem with overlapping text is fixed

--- a/src/users/Armen/hmwrk_3/App.scss
+++ b/src/users/Armen/hmwrk_3/App.scss
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&display=swap');
+
 .App {
 	width: 100vw;
 	min-height: 100vh;
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	font-family: 'Dosis', sans-serif;
 }
