--- a/src/users/Armen/hmwrk_3/Container/Container.scss
+++ b/src/users/Armen/hmwrk_3/Container/Container.scss
@@ -2,14 +2,13 @@
 	max-width: 1280px;
 	min-height: 600px;
 	background: lavender;
-	padding: 1em;
+	padding: 20px;
 	margin: 20px;
 	border-radius: 30px;
 	border: 2px solid #0002;
 	box-shadow: 2px 5px 5px 1px #0005;
 	display: grid;
-	// grid-template-columns: repeat(3, 1fr);
-	// grid-template-rows: repeat(3, 1fr);
+	grid-template-columns: 1fr 2fr 1fr;
 	grid-template-areas:
 		'top-left top-left right-top'
 		'left-bottom center right-top'
