--- a/src/users/Armen/hmwrk_3/Post/Post.scss
+++ b/src/users/Armen/hmwrk_3/Post/Post.scss
@@ -1,40 +1,45 @@
 .Post {
+	min-height: 200px;
 	border: 1px solid #0001;
 	padding: 1em;
-	border-radius: 12px;
-	// overflow: hidden;
+	border-radius: 16px;
+	color: rgb(108, 43, 43);
+	overflow: hidden;
 	display: grid;
-	// grid-template-columns: repeat(3, 1fr);
-	// grid-template-rows: repeat(3, 1fr);
+	grid-template-columns: min-content;
+	grid-template-rows: min-content;
 	grid-template-areas:
 		'title title delete'
-		'title title id'
-		'body body body';
+		'body body .'
+		'body body id';
 	gap: 20px;
-	// letter-spacing: 1px;
+	box-shadow: 2px 5px 5px #0005;
+	font-size: 20px;
+	line-height: 20px;
 
-	&:nth-child(1),
-	&:nth-child(2) {
+	&:nth-child(1) {
 		grid-area: top-left;
+		background: #ff007b;
 	}
 
-	&:nth-child(3),
-	&:nth-child(6) {
+	&:nth-child(2) {
 		grid-area: right-top;
+		background: #0066ff;
 	}
 
-	&:nth-child(8),
-	&:nth-child(9) {
+	&:nth-child(3) {
 		grid-area: bottom-right;
+		background: #ffc800;
 	}
 
-	&:nth-child(4),
-	&:nth-child(7) {
+	&:nth-child(4) {
 		grid-area: left-bottom;
+		background: #3ff91a;
 	}
 
 	&:nth-child(5) {
 		grid-area: center;
+		background: #ff00ee;
 	}
 
 	&:hover > .Container-userId {
@@ -42,30 +47,43 @@
 	}
 
 	&-userId {
-		// width: 40px;
-		// height: 40px;
-		border: 1px solid #0001;
 		border-radius: 4px;
 		text-align: center;
-		font-size: 1.5em;
+		font-size: 2.5em;
 		grid-area: id;
+		justify-self: end;
+		align-self: end;
 	}
 
 	&-title {
-		// height: 20%;
 		font-variant: small-caps;
 		text-align: center;
 		grid-area: title;
 		width: 100%;
 		height: 100%;
-		font-size: 12px;
+		font-size: 26px;
+		justify-self: center;
+		align-self: center;
+		letter-spacing: 2px;
 	}
 
 	&-body {
 		grid-area: body;
+		font-size: 18px;
+		justify-self: center;
 	}
 
 	&-delete {
 		grid-area: delete;
+		border-radius: 50%;
+		background: transparent;
+		border: 0;
+		cursor: pointer;
+		font-size: 1.4em;
+		width: 40px;
+		height: 40px;
+		align-self: start;
+		justify-self: end;
+		opacity: 0.7;
 	}
 }
